--- a/index.html
+++ b/index.html
@@ -2,24 +2,29 @@
 <html lang="en">
 
 <head>
+
+	<title>Goodle Replica</title>
+
 	<link rel="shortcut icon" href="img/favicon.ico">
 	<meta charset="UTF-8">
-	<title>Goodle Replica</title>
-	<!--I replaced this link with one from a help site. the one given wasn't working. Need to figure out why-->
+	
 	<link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+
+	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+
 	<link rel="stylesheet" href="css/main.css">
-	</head>
+</head>
 
 	<body>
 
-		<ul class="nav">
+		<ul class="navigation">
 			<li><a href="http:www.google.com/">+Fawn</a></li>
 			<li><a href="http://google.com/mail/?tab=wm">Mail</a></li>
 			<li><a href="https://www.google.com/imghp?hl=en&tab=wi&ei=jtezVc6XNcq2ed_doeAL&ved=0CBQQqi4oAQ">Images</a></li>
 			<li><div class="fa fa-th"></div></li>
 			<li><div class="fa fa-bell-o"></div></li>
 			<li><span class="share">Share</span></li>
-			<li><img class="profile_img" src="img/me.jpg"></li><!--trying to save an actual google profile image is... unsettlingly difficult. Resized the original image and replaced it-->
+			<li><img class="profile_img" src="img/me.jpg"></li>
 		</ul>
 
 		<div class="searchBox">
